# TetriNode

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  tetris_node.py
docs/: refactor_architecture.md  refactor_plan_progress.md
js/: tetris_live.js  textures.js
js/live/: constants.js
js/live/bridge/: backend_state.js  background_source.js  comfy_hooks.js  music_controller.js  node_runtime.js  node_selection.js  seed.js  state_io.js
js/live/config/: store.js
js/live/core/: color_utils.js  gameplay.js  lock_repeat.js  runtime_loop.js  runtime_state.js
js/live/data/: block_style_presets.js  color_presets.js  colors.js  controls.js  defaults.js  icons.js  music_tracks.js  shapes.js  theme_presets.js  theme_used_keys.js
js/live/input/: bindings.js  runtime_keys.js  toolbar_actions.js
js/live/render/: block_style.js  board.js  effects.js  layout.js  node_canvas.js  status_overlay.js  toolbar.js  toolbar_icons.js
js/live/ui/: animation_music_modal.js  block_style_modal.js  color_picker_modal.js  colors_modal.js  gameplay_modal.js  modal_base.js  settings_modal.js  theme_modal.js  theme_style.js
music/: music.blob
qa/baseline/: python_baseline.json
qa/parity/: _runtime.py  capture_python_baseline.py  run_all.py  verify_contracts.py  verify_python_parity.py
qa/standard/: run_all.py  ui_artifact_smoke.py  ui_regression_music_queue.py
tetrinode/: __init__.py  constants.py  node_api.py
tetrinode/assets/: music_bootstrap.py  textures.py
tetrinode/game/: engine.py  pieces.py  rng.py  scoring.py
tetrinode/render/: board.py  colors.py  preview.py  style.py
tetrinode/state/: codec.py  schema.py
