[project]
name = "TetriNode"
description = "A ComfyUI custom node pack that embeds a playable Tetris game inside a node UI, with image outputs for the live board and next-piece preview."
version = "2.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

[project.optional-dependencies]
dev = ["ruff>=0.0.0"]


[project.urls]
Repository = "https://github.com/soulctcher/TetriNode"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/soulctcher/TetriNode"
"Bug Tracker" = "https://github.com/soulctcher/TetriNode/issues"

[tool.comfy]
PublisherId = "soulctcher"
DisplayName = "TetriNode"
Icon = "https://raw.githubusercontent.com/soulctcher/TetriNode/refs/heads/main/docs/images/icon.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".comfyui_test",
    ".tspin_venv",
    ".tmp_tspin_pages",
    "tests/artifacts",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
